--- a/index.html
+++ b/index.html
@@ -13,64 +13,66 @@
   <div class="container">
     <div class="item item1">Grade 9 Timetable</div>
     <div class="item item2"></div>
-    <div class="item item3 time">09<br>30</div>
-    <div class="item item4 time">10<br>45</div>
-    <div class="item item5 time">12<br>00</div>
-    <div class="item item6 time">13<br>00</div>
-    <div class="item item7 time">13<br>35</div>
-    <div class="item item8 time">14<br>10</div>
-    <div class="item item9 time">14<br>45</div>
-    <div class="item item10 time">15<br>20</div>
-    <div class="item item11 time">16<br>00</div>
+    <div class="item item3 time">09<br>00</div>
+    <div class="item item4 time">10<br>05</div>
+    <div class="item item5 time">11<br>05</div>
+    <div class="item item6 time">12<br>15</div>
+    <div class="item item7 time">12<br>45</div>
+    <div class="item item8 time">13<br>15</div>
+    <div class="item item9 time">13<br>45</div>
+    <div class="item item10 time">14<br>15</div>
+    <div class="item item11 time">14<br>45</div>
     <div class="item item12 date">Mon</div>
     <div class="item item13 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
     <div class="item item14 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
-    <div class="item item15 RS"><a href="https://zoom.us/j/94562943452?pwd=VENPL0RJV2VLTVh3bHozYk1RUVdCZz09" class="RS" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Silverman</a></a></div>
-    <div class="item item16 NS"><a href="https://us04web.zoom.us/j/8742693456?pwd=QnZPek1IcEt6MnNYNWpZQWVQL0gzUT09" class="NS" style="place-self: center;" target="_blank">NS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Magid</a></a></div>
-    <div class="item item17 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
-    <div class="item item18 Afrikaans"><a href="https://us04web.zoom.us/j/2644098937?pwd=QytpWHY5dGdMV2FoeWdtNmF3SUVoQT09" class="Afrikaans" style="place-self: center;" target="_blank">A<br><a style="font-size: 15px; font-weight: lighter;">Ms. Du Plesuis</a></a></div>
-    <div class="item item19 English"><a href="https://us04web.zoom.us/j/5858072054" class="English" style="place-self: center;" target="_blank">E<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
-    <div class="item item20 Hebrew"><a href="https://zoom.us/j/4920152181?pwd=eW1ld1NkUnRsdTIzL0lGYWwydzlVdz09" class="Hebrew" style="place-self: center;" target="_blank">H<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Fisher</a></a></div>
-    <div class="item item21 empty"></div>
+    <div class="item item15 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
+    <div class="item item16 RS"><a href="https://zoom.us/j/94562943452?pwd=VENPL0RJV2VLTVh3bHozYk1RUVdCZz09" class="RS" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Silverman</a></a></div>
+    <div class="item item17 Afrikaans"><a href="https://us04web.zoom.us/j/2644098937?pwd=QytpWHY5dGdMV2FoeWdtNmF3SUVoQT09" class="Afrikaans" style="place-self: center;" target="_blank">A<br><a style="font-size: 15px; font-weight: lighter;">Ms. Du Plesuis</a></a></div>
+    <div class="item item18 NS"><a href="https://us04web.zoom.us/j/8742693456?pwd=QnZPek1IcEt6MnNYNWpZQWVQL0gzUT09" class="NS" style="place-self: center;" target="_blank">NS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Magid</a></a></div>
+    <div class="item item19 empty"></div>
+    <div class="item item20 English"><a href="https://us04web.zoom.us/j/5858072054" class="English" style="place-self: center;" target="_blank">E<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
+    <div class="item item21 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
     <div class="item item22 date">Tue</div>
     <div class="item item23 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
     <div class="item item24 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
-    <div class="item item25 RS"><a href="https://zoom.us/j/94562943452?pwd=VENPL0RJV2VLTVh3bHozYk1RUVdCZz09" class="RS" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Silverman</a></a></div>
-    <div class="item item26 Hebrew"><a href="https://zoom.us/j/4920152181?pwd=eW1ld1NkUnRsdTIzL0lGYWwydzlVdz09" class="Hebrew" style="place-self: center;" target="_blank">H<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Fisher</a></div>
-    <div class="item item27 English"><a href="https://us04web.zoom.us/j/5858072054" class="English" style="place-self: center;" target="_blank">E<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
-    <div class="item item28 SS"><a href="https://us04web.zoom.us/j/5858072054" class="SS" style="place-self: center;" target="_blank">SS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
+    <div class="item item25 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
+    <div class="item item26 empty"></div>
+    <div class="item item27 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
+    <div class="item item28 English"><a href="https://us04web.zoom.us/j/5858072054" class="English" style="place-self: center;" target="_blank">E<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
+    <div class="item item29 SS"><a href="https://us04web.zoom.us/j/5858072054" class="SS" style="place-self: center;" target="_blank">SS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
     <div class="item item29 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
-    <div class="item item30 empty"></div>
     <div class="item item31 empty"></div>
     <div class="item item32 date">Wed</div>
     <div class="item item33 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
     <div class="item item34 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
-    <div class="item item35 RS"><a href="https://zoom.us/j/94562943452?pwd=VENPL0RJV2VLTVh3bHozYk1RUVdCZz09" class="RS" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Silverman</a></a></div>
-    <div class="item item36 EMS"><a href="https://zoom.us/j/9783552552" class="EMS" style="place-self: center;" target="_blank">EMS<br><a style="font-size: 15px; font-weight: lighter;">R' Hurwitz</a></a></div>
-    <div class="item item37 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
-    <div class="item item38 Afrikaans"><a href="https://us04web.zoom.us/j/2644098937?pwd=QytpWHY5dGdMV2FoeWdtNmF3SUVoQT09" class="Afrikaans" style="place-self: center;" target="_blank">A<br><a style="font-size: 15px; font-weight: lighter;">Ms. Du Plesuis</a></a></div>
-    <div class="item item39 NS"><a href="https://us04web.zoom.us/j/8742693456?pwd=QnZPek1IcEt6MnNYNWpZQWVQL0gzUT09" class="NS" style="place-self: center;" target="_blank">NS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Magid</a></a></div>
-    <div class="item item40 LO"><a href="https://zoom.us/j/4635263211" class="LO" style="place-self: center;" target="_blank">LO<br><a style="font-size: 15px; font-weight: lighter;">R' Joseph</a></a></div>
-    <div class="item item41 empty"></div>
+    <div class="item item35 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
+    <!--<div class="item item36 EMS"><a href="https://zoom.us/j/9783552552" class="EMS" style="place-self: center;" target="_blank">EMS<br><a style="font-size: 15px; font-weight: lighter;">R' Hurwitz</a></a></div>-->
+    <div class="item item36 Afrikaans"><a href="https://us04web.zoom.us/j/2644098937?pwd=QytpWHY5dGdMV2FoeWdtNmF3SUVoQT09" class="Afrikaans" style="place-self: center;" target="_blank">A<br><a style="font-size: 15px; font-weight: lighter;">Ms. Du Plesuis</a></a></div>
+    <div class="item item37 Hebrew"><a href="https://zoom.us/j/4920152181?pwd=eW1ld1NkUnRsdTIzL0lGYWwydzlVdz09" class="Hebrew" style="place-self: center;" target="_blank">H<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Fisher</a></a></div>
+    <div class="item item38 Hebrew"><a href="https://zoom.us/j/4920152181?pwd=eW1ld1NkUnRsdTIzL0lGYWwydzlVdz09" class="Hebrew" style="place-self: center;" target="_blank">H<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Fisher</a></a></div>
+    <div class="item item39 empty"></div>
+    <!--<div class="item item40 LO"><a href="https://zoom.us/j/4635263211" class="LO" style="place-self: center;" target="_blank">LO<br><a style="font-size: 15px; font-weight: lighter;">R' Joseph</a></a></div>-->
+    <div class="item item40 NS"><a href="https://us04web.zoom.us/j/8742693456?pwd=QnZPek1IcEt6MnNYNWpZQWVQL0gzUT09" class="NS" style="place-self: center;" target="_blank">NS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Magid</a></a></div>
+    <div class="item item41 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
     <div class="item item42 date">Thurs</div>
     <div class="item item43 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
     <div class="item item44 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
-    <div class="item item45 RS"><a href="https://zoom.us/j/94562943452?pwd=VENPL0RJV2VLTVh3bHozYk1RUVdCZz09" class="RS" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Silverman</a></a></div>
-    <div class="item item46 SS"><a href="https://us04web.zoom.us/j/5858072054" class="SS" style="place-self: center;" target="_blank">SS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
-    <div class="item item47 Afrikaans"><a href="https://us04web.zoom.us/j/2644098937?pwd=QytpWHY5dGdMV2FoeWdtNmF3SUVoQT09" class="Afrikaans" style="place-self: center;" target="_blank">A<br><a style="font-size: 15px; font-weight: lighter;">Ms. Du Plesuis</a></a></div>
+    <div class="item item45 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
+    <div class="item item46 Afrikaans"><a href="https://us04web.zoom.us/j/2644098937?pwd=QytpWHY5dGdMV2FoeWdtNmF3SUVoQT09" class="Afrikaans" style="place-self: center;" target="_blank">A<br><a style="font-size: 15px; font-weight: lighter;">Ms. Du Plesuis</a></a></div>
+    <div class="item item47 EMS"><a href="https://zoom.us/j/9783552552" class="EMS" style="place-self: center;" target="_blank">EMS<br><a style="font-size: 15px; font-weight: lighter;">R' Hurwitz</a></a></div>
     <div class="item item48 Hebrew"><a href="https://zoom.us/j/4920152181?pwd=eW1ld1NkUnRsdTIzL0lGYWwydzlVdz09" class="Hebrew" style="place-self: center;" target="_blank">H<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Fisher</a></a></div>
-    <div class="item item49 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
-    <div class="item item50 empty"></div>
-    <div class="item item51 empty"></div>
+    <div class="item item49 empty"></div>
+    <div class="item item50 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
+    <div class="item item51 LO"><a href="https://zoom.us/j/4635263211" class="LO" style="place-self: center;" target="_blank">LO<br><a style="font-size: 15px; font-weight: lighter;">R' Joseph</a></a></div>
     <div class="item item52 date">Fri</div>
     <!--<div class="item item53 Assembly"><a href="https://zoom.us/j/7277761460" class="Assembly">A</a></div>-->
     <div class="item item54 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
     <div class="item item55 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
-    <div class="item item56 RS"><a href="https://zoom.us/j/94562943452?pwd=VENPL0RJV2VLTVh3bHozYk1RUVdCZz09" class="RS" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Silverman</a></a></div>
-    <div class="item item57 English"><a href="https://us04web.zoom.us/j/5858072054" class="English" style="place-self: center;" target="_blank">E<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
-    <div class="item item58 NS"><a href="https://us04web.zoom.us/j/8742693456?pwd=QnZPek1IcEt6MnNYNWpZQWVQL0gzUT09" class="NS" style="place-self: center;" target="_blank">NS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Magid</a></a></div>
-    <div class="item item59 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Baikie</a></a></div>
-    <div class="item item60 empty"></div>
+    <div class="item item56 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a style="font-size: 15px; font-weight: lighter;">R' Furman</a></a></div>
+    <div class="item item57 NS"><a href="https://us04web.zoom.us/j/8742693456?pwd=QnZPek1IcEt6MnNYNWpZQWVQL0gzUT09" class="NS" style="place-self: center;" target="_blank">NS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Magid</a></a></div>
+    <div class="item item58 empty"></div>
+    <div class="item item59 English"><a href="https://us04web.zoom.us/j/5858072054" class="English" style="place-self: center;" target="_blank">E<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
+    <div class="item item60 SS"><a href="https://us04web.zoom.us/j/5858072054" class="SS" style="place-self: center;" target="_blank">SS<br><a style="font-size: 15px; font-weight: lighter;">Mrs. Schiff</a></a></div>
     <div class="item item61 empty"></div>
     <div class="item item62 empty"></div>
   </div>
@@ -104,6 +106,9 @@
     .item2 {
       background-color: #767171;
     }
+    /*.item37 {
+      grid-column: span 4;
+    }*/
     /*.item53 {
       grid-column: span 1;
     }
