--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="item item48 Hebrew"><a href="https://zoom.us/j/4920152181?pwd=eW1ld1NkUnRsdTIzL0lGYWwydzlVdz09" class="Hebrew" style="place-self: center;" target="_blank">H<br><a><a style="font-size: 10px;">School</a><a style="font-size: 15px; font-weight: 600;">Mrs. Fisher</a></a></a></div>
     <div class="item item49 empty"></div>
     <div class="item item50 Math"><a href="https://us02web.zoom.us/j/6250541787?pwd=T1Y0UVQ4RjQ1UE9XMURPcTZRTzdxQT09" class="Math" style="place-self: center;" target="_blank">M<br><a><a style="font-size: 10px;">Zoom</a><a style="font-size: 15px; font-weight: 600;">Mrs. Baikie</a></a></a></div>
-    <div class="item item51 LO"><a href="https://zoom.us/j/4635263211" class="LO" style="place-self: center;" target="_blank">LO<br><a style="font-size: 15px; font-weight: lighter;">R' Joseph</a></a></div>
+    <div class="item item51 LO"><a href="https://zoom.us/j/4635263211" class="LO" style="place-self: center;" target="_blank">LO<br><a><a style="font-size: 10px;">Zoom</a><a style="font-size: 15px; font-weight: 600;">R' Joseph</a></a></a></div>
     <div class="item item52 date">Fri</div>
     <!--<div class="item item53 Assembly"><a href="https://zoom.us/j/7277761460" class="Assembly">A</a></div>-->
     <div class="item item54 RF"><a href="https://zoom.us/j/6145423407" class="RF" style="place-self: center;" target="_blank">K<br><a><a style="font-size: 10px;">School</a><a style="font-size: 15px; font-weight: 600;">R' Furman</a></a></a></div>
