--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ a.LO:hover {
 }
     .container {
       display: grid;
-      grid-template-columns: repeat(20, 1fr);
+      grid-template-columns: repeat(20, minmax(50px, 1fr));
       grid-template-rows: repeat(13, 1fr);
     }
     .item {
