--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
     <div class="item item61 empty"></div>
     <div class="item item62 empty"></div>
   </div></center>
+  <audio autoplay loop id="myaudio">
+    <source src="plz-work.mp3" type="audio/mpeg">
+    <embed src="plz-work.mp3" autostart="true" loop="true" hidden="true"> 
+  </audio>
 
   <style>
     a.RF:hover {
@@ -282,6 +286,10 @@ a.LO:hover {
       grid-column: span 3;
     }*/
   </style>
+  <script>
+    var audio = document.getElementById("myaudio");
+    audio.volume = 0.4;
+  </script>
 </body>
 
 </html>
